modify employee complete data
