# app/Http/Resources/EmployeeResource.php
@@ -16,14 +16,18 @@ class EmployeeResource extends JsonResource
     {
         return [
             'id' => $this->id,
-            'desc' => $this->desc,
-            'location' => $this->location,
-            'imageSSN' => $this->imageSSN,
-            'livePhoto' => $this->livePhoto,
-            'nationalId' => $this->nationalId,
-            'min_price' => $this->min_price,
+            'description' => $this->description,
+            'phone_number_1' => $this->phone_number_1,
+            'phone_number_2' => $this->phone_number_2,
+            'mobile_number_1' => $this->mobile_number_1,
+            'mobile_number_2' => $this->mobile_number_2,
+            'fax_number' => $this->fax_number,
+            'whatsapp_number' => $this->whatsapp_number,
+            'facebook_link' => $this->facebook_link,
+            'website' => $this->website,
             'user_id' => $this->user_id,
             'service_id' => $this->service_id,
+            'section_id' => $this->section_id,
             'works' => $this->whenLoaded('works')
         ];
     }
